--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Cabeçalho -->
   <header>
-    <h1>Minha Vitrine de Afiliados</h1>
+    <h1>Vitrine de Produtos</h1>
     <nav>
       <ul>
         <li><a href="#produtos">Produtos</a></li>
@@ -54,7 +54,6 @@
       <!-- Links fornecidos pelo usuário -->
       <a href="https://www.instagram.com/biel.purper" target="_blank">Instagram</a>
       <a href="https://www.tiktok.com/@magicpurper2007" target="_blank">TikTok</a>
-      <a href="https://www.facebook.com/profile.php?id=100011212773950" target="_blank">Facebook</a>
       <a href="https://www.capcut.com/profile/TsH88TDhIqXSgRC60e-hGr6LTt1P7jKROEJlLf2Sh2M" target="_blank">CapCut</a>
     </div>
   </section>
