--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         <p>Descrição breve do produto.</p>
         <!-- Botão que receberá o link de afiliado -->
         <a href="#" target="_blank" class="btn">Ver na Shopee</a>
+        <div class="produto-card">
+        <!-- Substituir 'img/produto1.png' pelo link da imagem do produto -->
+        <img src="img/produto1.png" alt="Produto 2">
+        <h3>Nome do Produto 2</h3>
+        <!-- Aqui você adiciona a descrição ou observações -->
+        <p>Descrição breve do produto.</p>
+        <!-- Botão que receberá o link de afiliado -->
+        <a href="#" target="_blank" class="btn">Ver na Shopee</a>
       </div>
 
       <!-- Exemplo de card com vídeo -->
@@ -60,7 +68,7 @@
 
   <!-- Rodapé -->
   <footer>
-    <p>© 2025 - Minha Vitrine de Afiliados Shopee</p>
+    <p>© 2025 - Minha Vitrine da Shopee</p>
   </footer>
 
   <script src="app.js"></script>
